# automation-scripts

./: .gitignore  README.md  add_sponsorship.py  extract_urls_from_brave.py  gh_daily_contributions.py  pyproject.toml  save_urls_as_clean_pdfs.py  toggle_visibility.py
.claude/: settings.json
data/input/: SC5_Research_Sources-v2-c.md
docs/runbooks/: add_sponsorship.md  convert_to_mp3.md  extract_urls_from_brave.md  get_battle_star_collection.md  gh_daily_contributions.md  git_sync_audit.md  license_audit.md  open-pages.md  pdf_page_stripper.md  probs_for_cant_stop.md  save_urls_as_clean_pdfs.md  terraforming_mars_epic_png_edit.md  toggle_visibility.md
ieee_ai/: Claude IEEE PES LRP Structure Precedent and Playbook.md  SC5_Research_Sources.md  SC5_Research_Sources_v3-c.md  SC5_Research_Sources_v3.md  claude-code-prompt-populate-projects.md
tests/: test_imports.py
tools/: git_sync_audit.sh  license_audit.py  open-pages.py
