[project]
name = "automation-scripts"
version = "0.1.0"
description = "Collection of automation scripts"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "tzdata (>=2025.2,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
