[project]
name = "automation-scripts"
version = "0.1.0"
description = "Collection of automation scripts"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Time zone utilities
    "tzdata (>=2025.2,<2026.0)",
    # Web archiving scripts (extract_urls_from_brave.py, save_urls_as_clean_pdfs.py)
    "trafilatura (>=1.9.0,<2.0.0)",
    "weasyprint (>=68.1,<69.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
