[project]
name = "automation-scripts"
version = "0.1.0"
description = "Collection of automation scripts"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Time zone utilities
    "tzdata (>=2025.2,<2026.0)",
    # Web archiving scripts (extract_urls_from_brave.py, save_urls_as_clean_pdfs.py)
    "trafilatura (>=1.9.0,<2.0.0)",
    "weasyprint (>=68.1,<69.0)"
]


[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
# Pytest is the test runner invoked by tools/dependabot_review.py (in
# AssemblyZero) as the test-must-pass gate. Without pytest in the venv,
# the gate is vacuously inapplicable and every dependabot PR defers
# forever. See issue #43. Bumped from <9.0 to <10.0 in #45 -- the
# original constraint resolved to a pytest 8.4.x with an open
# dependabot security alert (CVE fix in 9.0.3). Smoke tests use only
# imports + a trivial Image.new call; well within pytest 9's stable API.
pytest = ">=9.0,<10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
